force-app/main/default/objects/BusinessLicense/fields/Accreditation_Date__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Date__c</fullName>
    <label>Accreditation Date</label>
    <type>Date</type>
</CustomField>