force-app/main/default/objects/BusinessLicense/fields/ACMPS_Notified__c.field-meta.xml
<CustomField>
    <fullName>ACMPS_Notified__c</fullName>
    <label>ACMPS Notified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>