force-app/main/default/objects/BusinessLicense/fields/Care_Type_Not_Approved__c.field-meta.xml
<CustomField>
    <fullName>Care_Type_Not_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care Type Not Approved?</label>
    <type>Checkbox</type>
</CustomField>