force-app/main/default/objects/BusinessLicense/fields/CER_Consent_Revoked__c.field-meta.xml
<CustomField>
    <fullName>CER_Consent_Revoked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CER Consent Revoked</label>
    <type>Checkbox</type>
</CustomField>