force-app/main/default/objects/BusinessLicense/fields/CER_Exempt__c.field-meta.xml
<CustomField>
    <fullName>CER_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CER Exempt</label>
    <type>Checkbox</type>
</CustomField>