force-app/main/default/objects/BusinessLicense/fields/CM_Exempt__c.field-meta.xml
<CustomField>
    <fullName>CM_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Exempt</label>
    <type>Checkbox</type>
</CustomField>