force-app/main/default/objects/BusinessLicense/fields/Combined_Service__c.field-meta.xml
<CustomField>
    <fullName>Combined_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to determine if this combined service or not.</description>
    <label>Combined Service?</label>
    <type>Checkbox</type>
</CustomField>