force-app/main/default/objects/BusinessLicense/fields/Combined_To__c.field-meta.xml
<CustomField>
    <fullName>Combined_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combined To</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>BusinessLicense.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service Combine</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Non Continuing Services</relationshipLabel>
    <relationshipName>Non_Continuing_Services</relationshipName>
    <type>Lookup</type>
</CustomField>