force-app/main/default/objects/BusinessLicense/fields/Continuing_Service__c.field-meta.xml
<CustomField>
    <fullName>Continuing_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Continuing Service</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BusinessLicense.Care_Type__c</field>
            <operation>equals</operation>
            <value>Residential</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Combine Services</relationshipLabel>
    <relationshipName>Combine_Services</relationshipName>
    <type>Lookup</type>
</CustomField>