force-app/main/default/objects/BusinessLicense/fields/CountCurrentRegDec__c.field-meta.xml
<CustomField>
    <fullName>CountCurrentRegDec__c</fullName>
    <description>Count of current regulatory decisions</description>
    <label>Current Regulatory Decision Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>