force-app/main/default/objects/BusinessLicense/fields/Current_Accreditation_Duration__c.field-meta.xml
<CustomField>
    <fullName>Current_Accreditation_Duration__c</fullName>
    <description>Represents the duration in days of accreditation.</description>
    <label>Current Accreditation Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>