force-app/main/default/objects/BusinessLicense/fields/Date_of_Revocation_Letter__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Revocation_Letter__c</fullName>
    <description>REVOCATION_LETTER_DATE</description>
    <label>Date of Revocation Letter</label>
    <type>Date</type>
</CustomField>