force-app/main/default/objects/BusinessLicense/fields/Date_of_Revocation_Notice__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Revocation_Notice__c</fullName>
    <description>REVOCATION_LETTER_NOTICE</description>
    <label>Date of Revocation Notice</label>
    <type>Date</type>
</CustomField>