force-app/main/default/objects/BusinessLicense/fields/Date_Time_of_hold__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_hold__c</fullName>
    <label>Date/Time of hold</label>
    <type>DateTime</type>
</CustomField>