force-app/main/default/objects/BusinessLicense/fields/Date_Time_of_release__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_release__c</fullName>
    <label>Date/Time of release</label>
    <type>DateTime</type>
</CustomField>