force-app/main/default/objects/BusinessLicense/fields/Decision_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Due_Date__c</fullName>
    <label>Decision Due Date</label>
    <type>Date</type>
</CustomField>