force-app/main/default/objects/BusinessLicense/fields/Department_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Department_File_Number__c</fullName>
    <label>Department File Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>