force-app/main/default/objects/BusinessLicense/fields/Duplicate_Name__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Name</label>
    <type>Checkbox</type>
</CustomField>