force-app/main/default/objects/BusinessLicense/fields/First_Accreditation_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Accreditation_Date__c</fullName>
    <description>The very first time a service gets accredited</description>
    <label>First Accreditation Date</label>
    <type>Date</type>
</CustomField>