force-app/main/default/objects/BusinessLicense/fields/GPMS_Ceased__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Ceased__c</fullName>
    <description>Roll up field from Allotment record.</description>
    <label>Ceased</label>
    <summarizedField>Allotment__c.GPMS_Ceased__c</summarizedField>
    <summaryForeignKey>Allotment__c.Service_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>