force-app/main/default/objects/BusinessLicense/fields/GPMS_CombineLock__c.field-meta.xml
<CustomField>
    <fullName>GPMS_CombineLock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The combine flag for service during service combine process.</description>
    <label>Combine Lock</label>
    <type>Checkbox</type>
</CustomField>