force-app/main/default/objects/BusinessLicense/fields/GPMS_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Current_Status__c</fullName>
    <formula>TEXT(Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Status</label>
    <type>Text</type>
</CustomField>