force-app/main/default/objects/BusinessLicense/fields/GPMS_Extra_Service_Status__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Extra_Service_Status__c</fullName>
    <label>Extra Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distinct Part</fullName>
            </value>
            <value>
                <fullName>Whole Service</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>