force-app/main/default/objects/BusinessLicense/fields/GPMS_Service_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Service_Close_Date__c</fullName>
    <description>Indicates the date the provider stops being Commonwealth funded</description>
    <label>Service Closed Date</label>
    <type>Date</type>
</CustomField>