force-app/main/default/objects/BusinessLicense/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <description>Roll up field from Allotment record.</description>
    <label>Inactive</label>
    <summarizedField>Allotment__c.GPMS_Inactive__c</summarizedField>
    <summaryForeignKey>Allotment__c.Service_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>