force-app/main/default/objects/BusinessLicense/fields/Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Integration_ID__c</fullName>
    <formula>&apos;SRV-&apos;+IF(ISBLANK(Oracle_Service_ID__c),Service_Number__c,Oracle_Service_ID__c)</formula>
    <label>Integration ID</label>
    <type>Text</type>
</CustomField>