force-app/main/default/objects/BusinessLicense/fields/LegacyModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LegacyModifiedDate__c</fullName>
    <label>Legacy Modified Date</label>
    <type>DateTime</type>
</CustomField>