force-app/main/default/objects/BusinessLicense/fields/NoOf_NonCurr_Rating_RegDecision__c.field-meta.xml
<CustomField>
    <fullName>NoOf_NonCurr_Rating_RegDecision__c</fullName>
    <description>Field updated by SCR Handler with no of non current Regulatory decisions relevant for SCR Rating i.e Non Current that count towards SCR</description>
    <label>NoOf NonCurr Rating RegDecision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>