force-app/main/default/objects/BusinessLicense/fields/Offline__c.field-meta.xml
<CustomField>
    <fullName>Offline__c</fullName>
    <description>Roll up field from Allotment record.</description>
    <label>Offline</label>
    <summarizedField>Allotment__c.GPMS_Offline__c</summarizedField>
    <summaryForeignKey>Allotment__c.Service_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>