force-app/main/default/objects/BusinessLicense/fields/Operational__c.field-meta.xml
<CustomField>
    <fullName>Operational__c</fullName>
    <description>Roll up field from Allotment record.</description>
    <label>Operational</label>
    <summarizedField>Allotment__c.GPMS_Operational__c</summarizedField>
    <summaryForeignKey>Allotment__c.Service_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>