force-app/main/default/objects/BusinessLicense/fields/Operational_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Operational_Start_Date__c</fullName>
    <description>Indicates when service became operational</description>
    <label>Operational Start Date</label>
    <type>Date</type>
</CustomField>