force-app/main/default/objects/BusinessLicense/fields/Operational_Two_Last_Quarters__c.field-meta.xml
<CustomField>
    <fullName>Operational_Two_Last_Quarters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates if service has or has not been operational for last 2 full quarters</description>
    <label>Operational Two Last Quarters</label>
    <type>Checkbox</type>
</CustomField>