force-app/main/default/objects/BusinessLicense/fields/Oracle_Service_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Service_ID__c</fullName>
    <description>Migration value for APPROVAL_ID</description>
    <externalId>true</externalId>
    <label>Oracle Service ID</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>