force-app/main/default/objects/BusinessLicense/fields/Party_Id__c.field-meta.xml
<CustomField>
    <fullName>Party_Id__c</fullName>
    <label>Party Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>