force-app/main/default/objects/BusinessLicense/fields/Physical_Address_Location__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physical Address Location</label>
    <referenceTo>Address_Location__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>