force-app/main/default/objects/BusinessLicense/fields/PreviousReportingPeriodDueDt__c.field-meta.xml
<CustomField>
    <fullName>PreviousReportingPeriodDueDt__c</fullName>
    <label>PreviousReportingPeriodDueDt</label>
    <type>Date</type>
</CustomField>