force-app/main/default/objects/BusinessLicense/fields/PreviousReportingPeriodName__c.field-meta.xml
<CustomField>
    <fullName>PreviousReportingPeriodName__c</fullName>
    <description>It will store the reporting period name for QI notifications</description>
    <label>PreviousReportingPeriodName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>