force-app/main/default/objects/BusinessLicense/fields/Proposed_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date__c</fullName>
    <label>Proposed Date</label>
    <type>Date</type>
</CustomField>