force-app/main/default/objects/BusinessLicense/fields/Provisional__c.field-meta.xml
<CustomField>
    <fullName>Provisional__c</fullName>
    <label>Provisional</label>
    <summarizedField>Allotment__c.GPMS_Provisional__c</summarizedField>
    <summaryForeignKey>Allotment__c.Service_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>