force-app/main/default/objects/BusinessLicense/fields/QI_Exempt__c.field-meta.xml
<CustomField>
    <fullName>QI_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QI Exempt</label>
    <type>Checkbox</type>
</CustomField>