force-app/main/default/objects/BusinessLicense/fields/Quality_Indicator_Summary__c.field-meta.xml
<CustomField>
    <fullName>Quality_Indicator_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Indicator Summary</label>
    <referenceTo>Quality_Indicator_Summary__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>