force-app/main/default/objects/BusinessLicense/fields/RACS_ID__c.field-meta.xml
<CustomField>
    <fullName>RACS_ID__c</fullName>
    <label>RACS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>