force-app/main/default/objects/BusinessLicense/fields/RACS_ID_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>RACS_ID_Effective_Date__c</fullName>
    <label>RACS ID Effective Date</label>
    <type>Date</type>
</CustomField>