force-app/main/default/objects/BusinessLicense/fields/SCR_Exempt__c.field-meta.xml
<CustomField>
    <fullName>SCR_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCR Exempt</label>
    <type>Checkbox</type>
</CustomField>