force-app/main/default/objects/BusinessLicense/fields/Service_Care_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Care_Sub_Type__c</fullName>
    <label>Care Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Care_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community and Home Support</fullName>
            </value>
            <value>
                <fullName>Service System Development</fullName>
            </value>
            <value>
                <fullName>Care Relationship and Carer Support</fullName>
            </value>
            <value>
                <fullName>Assistance with Care and Housing</fullName>
            </value>
            <value>
                <fullName>Transition Care</fullName>
            </value>
            <value>
                <fullName>Innovative Pool</fullName>
            </value>
            <value>
                <fullName>Multi-Purpose Service</fullName>
            </value>
            <value>
                <fullName>National Aboriginal and Torres Strait Islander Flexible Aged Care Program</fullName>
            </value>
            <value>
                <fullName>Short-Term Restorative Care (STRC)</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>EACH Dementia</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Home Care Packages</fullName>
            </value>
            <value>
                <fullName>Innovative Pool - CDC High Care</fullName>
            </value>
            <value>
                <fullName>Innovative Pool - CDC High Care Dementia</fullName>
            </value>
            <value>
                <fullName>Innovative Pool - CDC Low Care</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Retirement Villages Care Pilot</fullName>
            </value>
            <value>
                <fullName>Extended Aged Care at Home</fullName>
            </value>
            <value>
                <fullName>STRC</fullName>
                <isActive>false</isActive>
                <label>STRC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>