force-app/main/default/objects/BusinessLicense/fields/Service_Name_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Name_Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Service Name Effective Date</label>
    <type>Date</type>
</CustomField>