force-app/main/default/objects/BusinessLicense/fields/Service_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Number__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Service Number</label>
    <type>AutoNumber</type>
</CustomField>