force-app/main/default/objects/BusinessLicense/fields/Service_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Open_Date__c</fullName>
    <label>Service Opened Date</label>
    <type>Date</type>
</CustomField>