force-app/main/default/objects/BusinessLicense/fields/Service_Status_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Status_Start_Date__c</fullName>
    <label>Service Status Start Date</label>
    <type>Date</type>
</CustomField>