force-app/main/default/objects/BusinessLicense/fields/ServiceIntegrationId__c.field-meta.xml
<CustomField>
    <fullName>ServiceIntegrationId__c</fullName>
    <description>This is the external identifier to be used for lookup/upserts from other systems.  It&apos;s set in a flow when the record&apos;s created and protected by a validation rule.</description>
    <externalId>true</externalId>
    <label>Service Integration Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>