force-app/main/default/objects/BusinessLicense/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Care_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Pre-operational</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Offline-Temporary Closure of Facility</fullName>
                <label>Offline - Temporary closure of facility</label>
            </value>
            <value>
                <fullName>Offline-Permanent Closure of Facility</fullName>
                <label>Offline - Permanent closure of facility</label>
            </value>
            <value>
                <fullName>Service Record Closed</fullName>
            </value>
            <value>
                <fullName>Closed-Combined</fullName>
                <label>Closed - Combined</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Non-Operational</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>Pre-Operational End</fullName>
            </value>
            <value>
                <fullName>Pre-Operational Start</fullName>
            </value>
            <value>
                <fullName>Offline - Permanent Closure of Facility</fullName>
                <isActive>false</isActive>
                <label>Offline - Permanent Closure of Facility</label>
            </value>
            <value>
                <fullName>Offline - Temporary Closure of Facility</fullName>
                <isActive>false</isActive>
                <label>Offline - Temporary Closure of Facility</label>
            </value>
            <value>
                <fullName>Suspended</fullName>
                <isActive>false</isActive>
                <label>Suspended</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>