force-app/main/default/objects/BusinessLicense/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <label>Status Effective Date</label>
    <type>Date</type>
</CustomField>