force-app/main/default/objects/BusinessLicense/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funding approved and commenced</fullName>
            </value>
            <value>
                <fullName>Funding not approved</fullName>
            </value>
            <value>
                <fullName>Has Authorised Grant(s)</fullName>
            </value>
            <value>
                <fullName>Has Completed Grant(s)</fullName>
            </value>
            <value>
                <fullName>Has Executed Grant(s)</fullName>
            </value>
            <value>
                <fullName>Has No Grants</fullName>
            </value>
            <value>
                <fullName>Has Rejected Grant(s)</fullName>
            </value>
            <value>
                <fullName>Has Suspended Grant(s)</fullName>
            </value>
            <value>
                <fullName>Has Terminated Grant(s)</fullName>
            </value>
            <value>
                <fullName>Has Unapproved Grant(s)</fullName>
            </value>
            <value>
                <fullName>HCP Conversion</fullName>
            </value>
            <value>
                <fullName>No current activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>