force-app/main/default/objects/BusinessLicense/fields/StatusReason__c.field-meta.xml
<CustomField>
    <fullName>StatusReason__c</fullName>
    <label>Status Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>