force-app/main/default/objects/BusinessLicense/recordTypes/Approved_Provider_Approval.recordType-meta.xml
<RecordType>
    <fullName>Approved_Provider_Approval</fullName>
    <active>true</active>
    <label>Approved Provider Approval</label>
</RecordType>