force-app/main/default/objects/BusinessLicense/recordTypes/Approved_Provider_Service.recordType-meta.xml
<RecordType>
    <fullName>Approved_Provider_Service</fullName>
    <active>true</active>
    <label>Approved Provider Service</label>
</RecordType>