force-app/main/default/objects/BusinessLicense/recordTypes/CHSP_Approval.recordType-meta.xml
<RecordType>
    <fullName>CHSP_Approval</fullName>
    <active>true</active>
    <label>CHSP Approval</label>
</RecordType>