force-app/main/default/objects/BusinessLicense/recordTypes/CHSP_Service.recordType-meta.xml
<RecordType>
    <fullName>CHSP_Service</fullName>
    <active>true</active>
    <label>CHSP Service</label>
</RecordType>