force-app/main/default/objects/BusinessLicense/recordTypes/NATSIFAC_Service.recordType-meta.xml
<RecordType>
    <fullName>NATSIFAC_Service</fullName>
    <active>true</active>
    <description>Used to record NATSIFAC Services</description>
    <label>NATSIFAC Service</label>
</RecordType>