force-app/main/default/objects/BusinessLicense/recordTypes/Service_Combine.recordType-meta.xml
<RecordType>
    <fullName>Service_Combine</fullName>
    <active>true</active>
    <label>Service Combine</label>
</RecordType>