force-app/main/default/objects/BusinessLicense/validationRules/Care_Sub_Type_Blank_Flexible.validationRule-meta.xml
<ValidationRule>
    <fullName>Care_Sub_Type_Blank_Flexible</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Care_Type__c,&apos;Flexible&apos;),ISBLANK(Text( Service_Care_Sub_Type__c)))</errorConditionFormula>
    <errorMessage>Please select Service Care Sub Type.</errorMessage>
</ValidationRule>