force-app/main/default/objects/BusinessLicense/validationRules/Care_type_Status_Effective_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Care_type_Status_Effective_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(Status_Date__c), 
 NOT(ISCHANGED(Status__c)), NOT(ISPICKVAL(Care_Type__c,&apos;Home Care&apos;)))</errorConditionFormula>
    <errorDisplayField>Status_Date__c</errorDisplayField>
    <errorMessage>Status Effective Date can be changed only for Home Care - Care Type</errorMessage>
</ValidationRule>