force-app/main/default/objects/BusinessLicense/validationRules/Perm_S_NATSIFAC_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_S_NATSIFAC_Access</fullName>
    <active>true</active>
    <description>NATSIFAC record access</description>
    <errorConditionFormula>AND(
OR(ISNEW(),
NOT(ISNEW()
)),
AND(
OR(
RecordType.DeveloperName = &apos;Approved_Provider_Service&apos;,
RecordType.DeveloperName = &apos;CHSP_Service&apos;,
RecordType.DeveloperName = &apos;Service_Combine&apos;),
$Permission.GPMS_NATSIFAC
))</errorConditionFormula>
    <errorMessage>You do not have access to edit this record</errorMessage>
</ValidationRule>