force-app/main/default/objects/BusinessLicense/validationRules/Service_Check_CareType_Not_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Check_CareType_Not_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>Care_Type_Not_Approved__c = true</errorConditionFormula>
    <errorDisplayField>Care_Type__c</errorDisplayField>
    <errorMessage>Provider is not approved to provide this care type.</errorMessage>
</ValidationRule>