force-app/main/default/objects/BusinessLicense/validationRules/Service_Closed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Closed_Date</fullName>
    <active>true</active>
    <description>Cannot Edit Status closed date for NATSIFAC if Status is Operational</description>
    <errorConditionFormula>AND(
NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
RecordType.DeveloperName =&apos;NATSIFAC_Service&apos;,
ISPICKVAL(Status__c ,&apos;Operational&apos;),
ISCHANGED(GPMS_Service_Close_Date__c))</errorConditionFormula>
    <errorDisplayField>GPMS_Service_Close_Date__c</errorDisplayField>
    <errorMessage>Service Closed Date cannot be edited when status is Operational.</errorMessage>
</ValidationRule>