force-app/main/default/objects/BusinessLicense/validationRules/ServiceCombineLock.validationRule-meta.xml
<ValidationRule>
    <fullName>ServiceCombineLock</fullName>
    <active>false</active>
    <description>This is used to lock the record during the service combine process.</description>
    <errorConditionFormula>AND(Not(IsNEW()), PRIORVALUE(GPMS_CombineLock__c) , GPMS_CombineLock__c )</errorConditionFormula>
    <errorMessage>This service is being combined. Records cannot be changed.</errorMessage>
</ValidationRule>